# pinocchio-bulksender

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json
lib/: index.ts
src/: error.rs  lib.rs  macros.rs
src/processor/: mod.rs  safe_transfer.rs
tests/: safeTransfer.test.ts
tests/fixture/: index.ts
