[package]
name = "pinocchio-bulksender"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-token = "0.4.0"
pinocchio-token-2022 = "0.1.0"
thiserror = "2.0.17"
